--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Mohejj/.vs/Mohejj/v15
+/Mohejj/Mohejj/ClientApp
