--- a/Mohejj/Mohejj/appsettings.json
+++ b/Mohejj/Mohejj/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppSettings": {
-    "Server": "http://localhost:44319"
+    "Server": "http://localhost:44319",
+    "accountSid": "22a6a89c",
+    "authToken": "asZN4GwsKiXyjoPg"
   },
   "Logging": {
     "LogLevel": {
